configs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: default
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: obs 
---
apiVersion: v1 
kind: Namespace 
metadata: 
  name: api-prd 
  labels: 
    istio-injection: enabled
